namespace Healthcare.Domain.Prescriptions.Enums;

public enum PrescriptionItemType
{
    Medication,
    OxygenTherapy,
    SoinLocaux,
    Inhalation,
    Injection
}
