namespace Healthcare.Domain.Prescriptions.Enums;

public enum PrescriptionStatus
{
    Created,
    Purchased
}
